Trying out two quick fixed for Safari on iOS.

--- a/styles/AuthPage.module.scss
+++ b/styles/AuthPage.module.scss
@@ -7,7 +7,8 @@
 }
 
 .main {
-  height: 100vh;
+  min-height: 100vh;
+  min-height: -webkit-fill-available;
   max-width: $max-screen-width;
   width: 100%;
 }
