--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -45,4 +45,5 @@ input {
   border-radius: $main-border-radius;
   padding: 0 12px;
   width: 100%;
+  -webkit-appearance: none;
 }
